--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.0-beta3",
     "install": "^0.13.0",
     "material-dashboard-dark-edition": "^2.1.0",
+    "notistack": "^1.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
