--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ cycler==0.10.0
 cymem==2.0.2
 decorator==4.4.1
 Django==2.2.2
+django-cors-headers==3.7.0
 djangorestframework==3.12.4
 docutils==0.15.2
 elasticsearch==7.9.1
